zakończenie procesu logowania, wstepne dodanie kontrolek dla administratorow

--- a/logowanie.ui
+++ b/logowanie.ui
@@ -6,9 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>209</width>
-    <height>223</height>
+    <width>200</width>
+    <height>200</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>200</width>
+    <height>200</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>200</width>
+    <height>200</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Logowanie</string>
@@ -18,7 +36,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>140</y>
+      <y>100</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -27,31 +45,49 @@
      <string>Zaloguj</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="loginText">
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>40</y>
+      <y>20</y>
       <width>113</width>
       <height>20</height>
      </rect>
     </property>
+    <property name="text">
+     <string>admin</string>
+    </property>
+    <property name="clearButtonEnabled">
+     <bool>true</bool>
+    </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_2">
+   <widget class="QLineEdit" name="hasloText">
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>100</y>
+      <y>70</y>
       <width>113</width>
       <height>20</height>
      </rect>
+    </property>
+    <property name="inputMask">
+     <string/>
+    </property>
+    <property name="text">
+     <string>admin</string>
+    </property>
+    <property name="echoMode">
+     <enum>QLineEdit::Password</enum>
+    </property>
+    <property name="clearButtonEnabled">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="loginLabel">
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>20</y>
+      <y>0</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -64,7 +100,7 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>80</y>
+      <y>50</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -73,13 +109,33 @@
      <string>Hasło</string>
     </property>
    </widget>
+   <widget class="QLabel" name="errorLabel">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>130</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 0, 0);
+text-align: center;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::RichText</enum>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>209</width>
+     <width>200</width>
      <height>21</height>
     </rect>
    </property>
