--- a/zalogowany.ui
+++ b/zalogowany.ui
@@ -30,17 +30,7 @@
      <attribute name="title">
       <string>Administratorzy</string>
      </attribute>
-     <widget class="QListView" name="administratorzyListView">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>10</y>
-        <width>171</width>
-        <height>192</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="dodajAdministratora">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -163,7 +153,7 @@
         <string>Hasło</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="edycjaAdministratora">
        <property name="geometry">
         <rect>
          <x>240</x>
@@ -176,6 +166,32 @@
         <string>Dodaj</string>
        </property>
       </widget>
+      <widget class="QLabel" name="errorLabel">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>160</y>
+         <width>201</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(255, 0, 0);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QListWidget" name="listWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>171</width>
+        <height>191</height>
+       </rect>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
