--- a/dodanieadminapowodzenie.ui
+++ b/dodanieadminapowodzenie.ui
@@ -16,7 +16,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>60</x>
      <y>10</y>
      <width>211</width>
      <height>21</height>
@@ -28,7 +28,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Dodanie/Edycja Użytkownika</string>
+    <string>Dodanie/Edycja</string>
    </property>
    <property name="scaledContents">
     <bool>false</bool>
