--- a/zalogowany.ui
+++ b/zalogowany.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>580</width>
-    <height>352</height>
+    <height>533</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Snooker</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTabWidget" name="opcjeWidget">
@@ -20,7 +20,7 @@
       <x>0</x>
       <y>0</y>
       <width>581</width>
-      <height>351</height>
+      <height>501</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -475,6 +475,252 @@
      <attribute name="title">
       <string>Turnieje</string>
      </attribute>
+     <widget class="QListWidget" name="turniejeListWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
+        <width>171</width>
+        <height>192</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QListWidget" name="zawodnicyTurniejListWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>291</y>
+        <width>171</width>
+        <height>151</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QListWidget" name="meczeListWidget">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>30</y>
+        <width>171</width>
+        <height>192</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QListWidget" name="partieListWidget">
+      <property name="geometry">
+       <rect>
+        <x>370</x>
+        <y>30</y>
+        <width>171</width>
+        <height>192</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="turniejeLabel">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Turnieje</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="zawodnicyTurniejLabel">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>270</y>
+        <width>61</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Zawodnicy</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="meczeLabel">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>10</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Mecze</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="partieLabel">
+      <property name="geometry">
+       <rect>
+        <x>370</x>
+        <y>10</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Partie</string>
+      </property>
+     </widget>
+     <widget class="QFrame" name="turniejFrame">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>240</y>
+        <width>371</width>
+        <height>211</height>
+       </rect>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <widget class="QLabel" name="nazwaTurniejLabel">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>10</y>
+         <width>111</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Nazwa</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="nazwaTurniejLineEdit">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>113</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="sponsorTurniejLabel">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>60</y>
+         <width>111</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Sponsor</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="sponsorTurniejLineEdit">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>80</y>
+         <width>113</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="miejsceTurniejLabel">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>110</y>
+         <width>111</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Miejsce</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="miejsceTurniejLineEdit">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>130</y>
+         <width>113</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="pulaNagrodTurniejLabel">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>10</y>
+         <width>111</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Pula Nagród</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="pulaNagrodTurniejLineEdit">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>30</y>
+         <width>113</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="najwyzszyBrejkTurniejLabel">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>60</y>
+         <width>91</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Najwyższy Brejk</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="najwyzszyBrejkTurniejLineEdit">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>80</y>
+         <width>113</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="liczbaZawodnikowTurniejLabel">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>110</y>
+         <width>111</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Liczba Zawodników</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="pulaNagrodTurniejLineEdit_4">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>130</y>
+         <width>113</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+     </widget>
     </widget>
    </widget>
   </widget>
