--- a/zalogowany.ui
+++ b/zalogowany.ui
@@ -635,13 +635,14 @@
         <property name="geometry">
          <rect>
           <x>170</x>
-          <y>100</y>
+          <y>90</y>
           <width>111</width>
-          <height>16</height>
+          <height>31</height>
          </rect>
         </property>
         <property name="text">
-         <string>Liczba Zawodników</string>
+         <string>Liczba Zawodników
+2/4/8/16</string>
         </property>
        </widget>
        <widget class="QPushButton" name="dodajZawodnikaPushButton">
