--- a/logowanie.ui
+++ b/logowanie.ui
@@ -55,7 +55,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>admin</string>
+     <string/>
     </property>
     <property name="clearButtonEnabled">
      <bool>true</bool>
@@ -74,7 +74,7 @@
      <string/>
     </property>
     <property name="text">
-     <string>admin</string>
+     <string/>
     </property>
     <property name="echoMode">
      <enum>QLineEdit::Password</enum>
